--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,12 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
 
         <!--web-->
         <dependency>
